# Titani

./: README.md  pyproject.toml
src/titani/: __init__.py  audio_pipeline.py  ceo.py  common.py  crio.py  say_queue.py  teia.py
src/titani/ceo_components/: __init__.py  audio_utils.py  config.py  debug.py  inbound.py  outbound.py
tests/: test_ceo_config.py  test_ceo_outbound_adaptation.py  test_ceo_say_queue.py  test_outbound_audio_track.py  test_sdp_sanitizer.py
